Cherry-pick r265257. rdar://problem/66644029

REGRESSION (r265019): ASSERTION FAILED: !m_impl || m_impl->wasConstructedOnMainThread() == isMainThread() under WebCore::PlaybackSessionInterfaceAVKit::invalidate()
    https://bugs.webkit.org/show_bug.cgi?id=215118

    Reviewed by Jer Noble.

    Revert the change about using a WeakPtr of PlaybackSessionModel in r265019.
    On WK1, a VideoFullscreenControllerContext (a subclass of PlaybackSessionModel)
    object is created on the main thread, so we cannot use a WeakPtr of it on
    the UI thread.

    No new tests, fix an API test failure: WebKitLegacy.AudioSessionCategoryIOS.

    * platform/ios/PlaybackSessionInterfaceAVKit.h:
    * platform/ios/PlaybackSessionInterfaceAVKit.mm:
    (WebCore::PlaybackSessionInterfaceAVKit::PlaybackSessionInterfaceAVKit):
    (WebCore::PlaybackSessionInterfaceAVKit::playbackSessionModel const):

    Canonical link: https://commits.webkit.org/227939@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265257 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.25.10-branch@265468 268f45cc-cd09-0410-ab3c-d52691b4dbfc